closing in on a header

--- a/content/index.html
+++ b/content/index.html
@@ -3,7 +3,9 @@ title: love fear love
 ---
 
 <div class="header">
-  love fear love
+  love
+  <span class="fear">fear</span>
+  love
 </div>
 
 <div id="main">
