--- a/content/index.html
+++ b/content/index.html
@@ -2,6 +2,8 @@
 title: love fear love
 ---
 
+<h1>What what</h1>
+
 <p>
   You’ve just created a new nanoc site. The page you are looking at
   right now is the home page for your site. To get started, consider
