finishing home page

--- a/content/index.html
+++ b/content/index.html
@@ -2,31 +2,16 @@
 title: love fear love
 ---
 
-<h1>What what</h1>
-
-<p>
-  You’ve just created a new nanoc site. The page you are looking at
-  right now is the home page for your site. To get started, consider
-  replacing this default homepage with your own customized
-  homepage. Some pointers on how to do so:
-</p>
-
-<ul>
-  <li>
-    <p><strong>Change this page’s content</strong> by editing the
-      “index.html” file in the “content” directory. This is the actual
-      page content, and therefore doesn’t include the header, sidebar or
-      style information (those are part of the layout).</p>
-  </li>
-  <li>
-    <p><strong>Change the layout</strong>, which is the “default.html”
-      file in the “layouts” directory, and create something unique (and
-      hopefully less bland).</p>
-  </li>
-</ul>
-
-<p>
-  If you need any help with customizing your nanoc web site, be sure
-  to check out the documentation (see sidebar), and be sure to
-  subscribe to the discussion group (also see sidebar). Enjoy!
-</p>
+<div class="home">
+  <% sorted_articles.each do |article| %>
+  <div class="article-summary">
+    <h2><a href="<%= article.path %>"><%= article[:title] %></a></h2>
+    <div class="date">
+      <%= format_date article[:created_at] %>
+    </div>
+    <p>
+      <%= article[:summary] %>
+    </p>
+  </div>
+  <% end %>
+</div>
